--- a/samples/BlazorServerSide/BlazorServerSide.csproj
+++ b/samples/BlazorServerSide/BlazorServerSide.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Juniperr.Blazor.Toolbar\Juniperr.Blazor.Toolbar.csproj" />
+  </ItemGroup>
+
 </Project>
