Moved from Juniperr to Super

--- a/samples/BlazorServerSide/BlazorServerSide.csproj
+++ b/samples/BlazorServerSide/BlazorServerSide.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Juniperr.Blazor.Toolbar\Juniperr.Blazor.Toolbar.csproj" />
+    <ProjectReference Include="..\..\src\Super.Blazor.Toolbar\Super.Blazor.Toolbar.csproj" />
   </ItemGroup>
 
 </Project>
