--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -5,7 +5,7 @@ on:
     types: [ published ]
 
 env:
-    PROJECT_NAME: Super.Blazor.Toolbar
+    PROJECT_NAME: Supercode.Blazor.Toolbar
     GITHUB_FEED: https://nuget.pkg.github.com/cschulzsuper/
     NUGET_FEED: https://api.nuget.org/v3/index.json
     PACKAGE_VERSION: ${{ github.event.release.tag_name }}
